--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <% if flash[:notice] %>
+      <div class ="notice-box">
+        <p class="notice"><%= notice %></p>
+      </div>
+    <% end %>
+
+    <% if flash[:alert] %>
+      <div class ="alert-box">
+        <p class="alert"><%= alert %></p>
+      </div>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
