add-user-function

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="contents row">
   <div class="container">
-    <h2>新規登録</h2>
+    <h2 class>新規登録</h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "new_user") do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "new-user" } ) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
