--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,21 @@
         <p class="alert"><%= alert %></p>
       </div>
     <% end %>
-    
+
+    <header>
+      <h1>ArtSpot</h1>
+      <div class="header">
+        <%= link_to "Home", root_path %>
+        <% if user_signed_in?%>
+          <%= link_to "マイページ", user_path(current_user.id) %>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "ログイン", new_user_session_path %>
+          <%= link_to "新規登録", new_user_registration_path %>
+        <% end %>
+      </div>
+    </header>
+
     <%= yield %>
   </body>
 </html>
