--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,23 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<div class="contents row">
+  <div class="container">
+    <h2 class>新規登録</h2>
+
+    <%= form_with(model:[@spot, @post]) do |form| %>
+      <div class="field">
+        <%= form.text_field :title %>
+      </div>
+
+      <div class="field">
+        <%= form.file_field :image %>
+      </div>
+
+      <div class="field">
+        <%= form.text_field :text %>
+      </div>
+
+      <div class="actions">
+        <%= form.submit "投稿" %>
+      </div>
+    <% end %>
+  </div>
+</div>
