--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -3,6 +3,9 @@
     <%= image_tag 'kurematisu.jpg', class: "spot1-image" %>
   </div>
   <div class ="spot-img">
+    <%= image_tag 'shutaine3.jpg', class: "spot2-image" %>
+  </div>
+  <div class ="spot-img">
     <%= image_tag 'kotori.jpg', class: "spot2-image" %>
   </div>
 </div>
