--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -7,5 +7,21 @@
     <div class="spot-name">
       <%= @spot.name %>
     </div>
+    <div class="spot-link">
+      <%= link_to "投稿する", new_spot_post_path(@spot.id) %>
+    </div>
   </div>
+</div>
+
+<div class="post-box">
+  <% @spot.posts.each do |post| %>
+    <div class="post">
+      <%= link_to spot_post_path(post.spot.id, post.id) do %>
+        <%= image_tag post.image.url, class: "post-image" %>
+      <% end %>
+      <%= link_to user_path(post.user.id) do %>
+       <p><%= post.user.name %></p>
+      <% end %>
+    </div>
+  <% end %>
 </div>
