--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <% if @user.image? %>
       <%= image_tag @user.image.url, class: "user-image" %>
     <% else %>
-      <%= image_tag 'noimage.png', class: "user-image" %>
+      <%= image_tag 'noimage.png',class: "user-image" %>
     <% end %>
   </div>
   <div class="user-right">
@@ -24,4 +24,15 @@
       <% end %>
     </div>
   </div>
+</div>
+
+<div class="post-box">
+  <% @user.posts.each do |post| %>
+    <div class="post">
+      <%= link_to spot_post_path(post.spot.id, post.id) do %>
+        <%= image_tag post.image.url, class: "post-image" %>
+      <% end %>
+      <p class="create-time"><%= post.created_at.strftime("%Y年%m月%d日 %H時%M分") %></p> 
+    </div>
+  <% end %>
 </div>
