--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -1,7 +1,7 @@
 .post-show {
   display: flex;
   justify-content: space-around;
-  background-color: #DCDCDC;
+  background-color: #F5F5F5;;
   padding: 20px;
 }
 
