--- a/app/assets/stylesheets/modules/_spots.scss
+++ b/app/assets/stylesheets/modules/_spots.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #DCDCDC;
+  background-color: #F5F5F5;
   padding: 20px;
 }
 
@@ -30,7 +30,7 @@
 .spot-show {
   display: flex;
   justify-content: space-around;
-  background-color: #DCDCDC;
+  background-color: #F5F5F5;
   padding: 20px;
 }
 
