--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -28,7 +28,7 @@ header h1 {
 .container {
   padding: 40px 200px;
   height: 500px;
-  background-color: lightgray;
+  background-color:#F5F5F5;
   h2 {
     font-size: 30px;
     margin-bottom: 20px;
@@ -62,7 +62,7 @@ header h1 {
 .user-show {
   display: flex;
   justify-content: space-around;
-  background-color: #DCDCDC;
+  background-color: #F5F5F5;
   padding: 20px;
 }
 
