--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,7 @@
 @import "modules/flash";
 @import "modules/spots";
 @import "modules/posts";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 
