--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -22,6 +22,16 @@
       <%= link_to user_path(post.user.id) do %>
        <p><%= post.user.name %></p>
       <% end %>
+      <% if current_user.already_favorited?(post) %>
+        <%= link_to spot_post_favorites_path(post.spot.id, post.id), method: :delete do %>
+           <i class="fas fa-heart"></i>
+        <% end %>
+      <% else %>
+        <%= link_to spot_post_favorites_path(post.spot.id, post.id), method: :post do %>
+          <i class="far fa-heart"></i>
+        <% end %>
+      <% end %>
+      <%= post.favorites.count %>
     </div>
   <% end %>
 </div>
