--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,6 +24,21 @@
     <% end %>
     <%= @post.favorites.count %>
   </div>
-
 </div>
+
+<div class="container">
+  <%= form_with model: [@spot, @post, @comment]  do |form| %>
+    <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
+    <%= form.submit "SEND" %>
+  <% end %>
+</div>
+
+<div class="comments">
+  <h4>＜コメント一覧＞</h4>
+  <% @comments.each do |comment| %>
+    <p> <%= comment.user.name %> </p>
+    <p> <%= comment.text %> </p>
+  <% end %>
+</div>
+
 
