--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -4,20 +4,6 @@
   text-decoration: none;
 }
 
-header h1 {
-  font-size: 50px;
-  font-family: 'Caveat', cursive;
-}
-
-.header {
-  height: 45px;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-
 .contents-row {
   width: 800px;
   margin: 60px auto 0;
@@ -27,12 +13,13 @@ header h1 {
 
 .container {
   padding: 40px 200px;
-  height: 500px;
+  height: 100%;
   background-color:#F5F5F5;
   h2 {
     font-size: 30px;
     margin-bottom: 20px;
-    color: white;
+    color: #BDB76B;
+    font-weight: bold;
   }
 }
 
@@ -71,9 +58,11 @@ header h1 {
 }
 
 .user-image {
-  width:270px;
-  height:210px;
+  width:240px;
+  height:240px;
   object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid #BDB76B;
 }
 
 .user-name {
