--- a/app/assets/stylesheets/modules/_spots.scss
+++ b/app/assets/stylesheets/modules/_spots.scss
@@ -114,3 +114,22 @@
 .area-p {
   display: none;
 }
+
+.icons {
+  display: flex;
+  justify-content: center;
+  color: darkgrey;
+}
+
+.icons h5 {
+  color:#BDB76B;
+  margin-right: 15px;
+}
+
+.icons p {
+  margin-right: 8px;
+}
+
+.icons a {
+  color: darkgrey;
+}
