--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class>新規登録</h2>
 
-    <%= form_with(model:[@spot, @post]) do |form| %>
+    <%= form_with model:[@spot, @post], local: true do |form| %>
       <div class="field">
         <%= form.text_field :title, placeholder: "spot"  %>
       </div>
