--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -43,6 +43,12 @@
   margin-bottom: 30px;
 }
 
+.comments {
+  overflow-y: auto;
+  width : 100%;
+  height: 200px;
+}
+
 .comments h4{
   margin-top: 40px;
   font-size: 25px;
