--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -71,7 +71,7 @@
       </div>
     </div>
     <div class ="spot-img">
-      <%= image_tag 'unnamed.jpg', class: "spot-image2" %>
+      <%= image_tag 'yonezu.jpeg', class: "spot-image2" %>
     </div> 
   </div>
 </div>
