--- a/app/assets/stylesheets/modules/_posts.scss
+++ b/app/assets/stylesheets/modules/_posts.scss
@@ -83,6 +83,11 @@
   background-color:#FFFFEE;
   padding: 8px;
 }
+.comment-created_at {
+  font-size: 5px;
+  color: lightgray;
+  margin-left: 8px;
+}
 
 .comment-form-box {
   width: 80%;
