--- a/app/assets/stylesheets/modules/_spots.scss
+++ b/app/assets/stylesheets/modules/_spots.scss
@@ -48,11 +48,11 @@
 }
 
 .spot-image2 {
-  width: 300px;
+  width: 450px;
   height: 400px;
   object-fit: cover;
   border-radius: 3%;
-  margin-left: 100px;
+  margin-left: 50px;
 }
 
 .area-index {
@@ -132,4 +132,31 @@
 
 .icons a {
   color: darkgrey;
+}
+
+.search-form{
+  margin-top: 80px;
+  display: flex;
+  align-items: center;
+}
+
+.search-input {  
+  border-style: none;
+  padding-left: 5px;
+  margin-right: 10px;
+  box-sizing: border-box;
+  width: 400px;
+  height: 40px;
+  border: none;
+  box-shadow: 0 1px 0 rgba(0,0,0,.07) inset;
+  border-radius: 3px;
+  display: block;
+}
+
+.search-btn {
+  border: none;
+  width: 50px;
+  background-color: #C2EEFF;
+  display: block;
+  height: 40px;
 }
