--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -18,7 +18,7 @@
 </div>
 
 <div class="post-box">
-  <% @spot.posts.each do |post| %>
+  <% @posts.each do |post| %>
     <div class="post">
       <%= link_to spot_post_path(post.spot.id, post.id) do %>
         <%= image_tag post.image.url, class: "post-image" %>
