--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -46,6 +46,7 @@
     <div class="comment-box">
       <p class="comment-name"> <%= comment.user.name %> </p>
       <p class="comment-text"> <%= comment.text %> </p>
+      <p class="comment-created_at"> <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分") %> </p>
     </div>
   <% end %>
 </div>
