--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -84,3 +84,10 @@
     <%# <%= f.submit "SEND" %> 
   <%# <% end %> 
 <%# </div> %> 
+
+
+<%# <%= form_with(model: @spot, local: true) do |form| %>
+  <%# <%= form.text_field :name %>
+  <%# <%= form.file_field :image %>
+  <%# <%= form.submit "SEND" %>
+<%# <% end %> 
