--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -69,10 +69,10 @@
           </li>
         </ul>
       </div>
-    </div>
+    <%# </div>
     <div class ="spot-img">
       <%= image_tag 'yonezu.jpeg', class: "spot-image2" %>
-    </div> 
+    <%# </div>  %> 
   </div>
 </div>
 
