--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -82,3 +82,16 @@
   margin-bottom: 30px;
   color: #333333;
 }
+
+.user-edit {
+  margin-top: 100px;
+  background-color: #fff;
+  width: 100px;
+  border-radius: 4px;
+  padding: 5px;
+  text-align: center;
+  border: 1px dotted #BDB76B;
+  a {
+    color: #BDB76B;
+  }
+}
