--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -69,25 +69,6 @@
           </li>
         </ul>
       </div>
-    <%# </div>
-    <div class ="spot-img">
-      <%= image_tag 'yonezu.jpeg', class: "spot-image2" %>
-    <%# </div>  %> 
+    </div>
   </div>
 </div>
-
-<%# 後で削除 %>
-<%# <div class="container">
-  <%= form_for :post, url: '/spots'  do |f| %>
-    <%# <%= f.text_field :name %>
-    <%# <%= f.file_field :image %>
-    <%# <%= f.submit "SEND" %> 
-  <%# <% end %> 
-<%# </div> %> 
-
-
-<%# <%= form_with(model: @spot, local: true) do |form| %>
-  <%# <%= form.text_field :name %>
-  <%# <%= form.file_field :image %>
-  <%# <%= form.submit "SEND" %>
-<%# <% end %> 
